--- a/Bisection2.html
+++ b/Bisection2.html
@@ -14,5 +14,5 @@
     </form>
     <button onclick="calbi()">Calculator</button>
     <pre id = "result" ></pre>
-    <script src="FUNC3.JS"></script>
+    <script src="Fun4.js"></script>
 </body>
