--- a/bisec3.html
+++ b/bisec3.html
@@ -11,8 +11,8 @@
         <input type ="text" id = "XL">
         <input type = "text" id = "XR">
     </form>   
-    <button onclick="Calculator()">Calculator
+    <button onclick="cal()">Calculator
     </button>
     <pre id = "result"></pre>
-    <script src = "fun7.js"></script>
+    <script src = "fun8.js"></script>
 </body>
