--- a/bisec3.html
+++ b/bisec3.html
@@ -11,7 +11,7 @@
         <input type ="text" id = "XL">
         <input type = "text" id = "XR">
     </form>   
-    <button onclick="cal()">Calculator
+    <button onclick="Calculator()">Calculator
     </button>
     <pre id = "result"></pre>
     <script src = "fun8.js"></script>
